--- a/404.html
+++ b/404.html
@@ -109,7 +109,7 @@
 
 
 
-                            <li class="megamenu megamenu-clickable megamenu-clickable--toggler">  <a href="index.html">Legislação</a>
+                            <li class=" ">   <a href="reviews.html">Legislação</a>
                                 <ul>
                                     <li>
                                         <div class="megamenu-popup">
@@ -354,7 +354,8 @@
                 <ul class="drivschol-breadcrumb list-unstyled">
                     <li><a href="index.html">Home</a></li>
                     <li><span>404 Error</span></li>
-                </ul><!-- /.thm-breadcrumb list-unstyled -->
+                </ul>
+                <!-- /.thm-breadcrumb list-unstyled -->
             </div><!-- /.container -->
         </section><!-- /.page-header -->
 
