--- a/blog-grid-left.html
+++ b/blog-grid-left.html
@@ -109,7 +109,7 @@
 
 
 
-                            <li class="megamenu megamenu-clickable megamenu-clickable--toggler">  <a href="index.html">Legislação</a>
+                            <li class=" ">   <a href="reviews.html">Legislação</a>
                                 <ul>
                                     <li>
                                         <div class="megamenu-popup">
