--- a/team-carousel.html
+++ b/team-carousel.html
@@ -170,210 +170,10 @@
             <nav class="main-header__nav main-menu">
               <ul class="main-menu__list">
                 <li
-                  class="megamenu megamenu-clickable megamenu-clickable--toggler"
+                  class=" "
                 >
-                  <a href="index.html">Legislação</a>
-                  <ul>
-                    <li>
-                      <div class="megamenu-popup">
-                        <a href="#" class="megamenu-clickable--close"
-                          ><span class="icon-close"></span
-                        ></a>
-                        <!-- /.megamenu-clickable -->
-                        <div class="megamenu-popup__content">
-                          <div class="demo-one">
-                            <div class="container">
-                              <div class="row">
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                      <img
-                                        src="assets/images/landing/home-1.jpg"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-rtl.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span> </a
-                                        ><!-- /.thm-btn demo-one__btn -->
-                                      </div>
-                                      <!-- /.demo-one__btns -->
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                        <h3 class="demo-one__title">
-                                          <a href="index-2.html">Home Page 01</a>
-                                        </h3>
-                                        <!-- /.demo-one__title -->
-                                      </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
+                <a href="reviews.html">Legislação</a>
 
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                    <img  src="assets/doc/img/rnlc.png"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-rtl.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span>
-                                        </a>
-                                      </div>
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                      <h3 class="demo-one__title">
-                                        <a href="index-2.html">Comunicado FAF N° 26/22</a>
-                                      </h3>
-                                      <!-- /.demo-one__title -->
-                                    </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
-
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                    <img  src="assets/doc/img/comunicado.png"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-rtl.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span> </a
-                                        ><!-- /.thm-btn demo-one__btn -->
-                                      </div>
-                                      <!-- /.demo-one__btns -->
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                      <h3 class="demo-one__title">
-                                        <a href="index-3.html">Regulamento N. para o Licenciamento de Clube</a>
-                                      </h3>
-                                      <!-- /.demo-one__title -->
-                                    </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
-
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                      <img
-                                         src="assets/doc/img/desporto.png"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-dark.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span> </a
-                                        ><!-- /.thm-btn demo-one__btn -->
-                                      </div>
-                                      <!-- /.demo-one__btns -->
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                      <h3 class="demo-one__title">
-                                        <a href="index-dark.html">Lei  nº 6-14 das Associações Desportivas</a>
-                                      </h3>
-                                      <!-- /.demo-one__title -->
-                                    </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
-
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                      <img
-                                         src="assets/doc/img/desporto.png"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-boxed.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span> </a
-                                        ><!-- /.thm-btn demo-one__btn -->
-                                      </div>
-                                      <!-- /.demo-one__btns -->
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                      <h3 class="demo-one__title">
-                                        <a href="index-boxed.html"
-                                          >Lei nº 5 -  do Desporto Nacional</a
-                                        >
-                                      </h3>
-                                      <!-- /.demo-one__title -->
-                                    </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
-
-                                <div class="col-md-6 col-lg-4">
-                                  <div class="demo-one__card">
-                                    <div class="demo-one__image">
-                                      <img
-                                       src="assets/doc/img/estatuto.png"
-                                        alt=""
-                                      />
-                                      <div class="demo-one__btns">
-                                        <a
-                                          href="index-rtl.html"
-                                          class="drivschol-btn demo-one__btn"
-                                        >
-                                          <span>Ver documento</span> </a
-                                        ><!-- /.thm-btn demo-one__btn -->
-                                      </div>
-                                      <!-- /.demo-one__btns -->
-                                    </div>
-                                    <!-- /.demo-one__image -->
-                                    <div class="demo-one__content">
-                                      <h3 class="demo-one__title">
-                                        <a href="/assets/doc/ESTATUTO DOGDI.pdf">Estatuto do Grupo Desportivo Interclube</a>
-                                      </h3>
-                                      <!-- /.demo-one__title -->
-                                    </div>
-                                    <!-- /.demo-one__content -->
-                                  </div>
-                                  <!-- /.demo-one__card -->
-                                </div>
-                                <!-- /.col-md-6 col-lg-3 -->
-                              </div>
-                              <!-- /.row -->
-                            </div>
-                            <!-- /.container -->
-                          </div>
-                          <!-- /.demos-one -->
-                        </div>
-                        <!-- /.megamenu-popup__content -->
-                      </div>
-                      <!-- /.megamenu-popup -->
-                    </li>
-                  </ul>
                 </li>
 
                 <li><a href="about.html">Sobre</a></li>
@@ -1174,7 +974,7 @@
           <div class="container">
             <div class="main-footer__bottom__inner">
               <p class="main-footer__copyright">
-                 <img src="assets/images/logotech.png" id="logo-jftech"></span>&nbsp; feito com ♥️
+                 <img src="assets/images/logotech.png" id="logo-jftech"></span>
               </p>
             </div>
             <!-- /.main-footer__inner -->
