--- a/reviews.html
+++ b/reviews.html
@@ -749,10 +749,13 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
 
 
     <script>
-
-
-
+    var elementFa = document.getElementById();
+     if (elementFa.value!=null){
       
+     }
+
+
+
     </script>
 
     <!--  ALl JS Plugins =====================
