feat: legidtacao terminado

--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
                 <a href="reviews.html">Legislação</a>
                 </li>
 
-                 <li><a href="services.html">Comunicados e informções</a></li><li><a href="about.html">Sobre</a></li>
+                 <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -225,6 +225,24 @@
                       </li>
               </ul>
             </nav>
+            <div style="display:flex;justify-content: space-between;width: 50px;">
+              <a href="socio.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-journal-bookmark-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M6 1h6v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"/>
+              <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2"/>
+              <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z"/>
+            </svg>
+          </a>
+          <a href="socio.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"  viewBox="0 0 16 16">
+                </svg>
+          </a>
+          <a href="store.html">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
+                  <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"/>
+                </svg>
+          </a>
+      </div>
             <!-- /.main-header__nav -->
             <div class="d-none">
               <div class="info-item d-none">
@@ -864,7 +882,7 @@
                 <div class="footer-widget">
                   <div class="footer-widget--links footer-widget--links2">
                     <ul class="list-unstyled footer-widget__links">
-                       <li><a href="services.html">Comunicados e informções</a></li><li><a href="about.html">Sobre</a></li>
+                       <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                       <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -891,45 +909,45 @@
               <div class="col-md-6 col-xl-3">
                 <div class="footer-widget">
                   <div class="footer-widget--gallry">
-                    <div class="footer-widget__grid">
+                    <div class="footer-widget__grid d-none">
                       <a
                         href="assets/images/gallery/gallery-2-1.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-1.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-2.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-2.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-3.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-3.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-4.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-4.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-5.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-5.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-6.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-6.jpg);
                         "
