--- a/services.html
+++ b/services.html
@@ -174,7 +174,7 @@
                   <a href="reviews.html">Legislação</a>
                 </li>
 
-                <li><a href="services.html">Comunicados e informções</a></li>
+                <li><a href="services.html">Comunicados e informações</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li class="dropdown"></li>
                 <li class="dropdown">
@@ -234,19 +234,19 @@
             <!-- /.main-header__nav -->
            
             <div style="display:flex;justify-content: space-between;width: 50px;">
-                    <a href="cart.html">
+                    <a href="socio.html">
                   <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-journal-bookmark-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M6 1h6v7a.5.5 0 0 1-.757.429L9 7.083 6.757 8.43A.5.5 0 0 1 6 8z"/>
                     <path d="M3 0h10a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-1h1v1a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v1H1V2a2 2 0 0 1 2-2"/>
                     <path d="M1 5v-.5a.5.5 0 0 1 1 0V5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0V8h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1zm0 3v-.5a.5.5 0 0 1 1 0v.5h.5a.5.5 0 0 1 0 1h-2a.5.5 0 0 1 0-1z"/>
                   </svg>
                 </a>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor"  viewBox="0 0 16 16">
+                <a href="socio.html">
+              <svg xmlns="http://www.w3.org/2000/svg"  width="26" height="26" fill="currentColor"  viewBox="0 0 16 16">
                       </svg>
                 </a>
-                <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
+                <a href="store.html">
+              <svg xmlns="http://www.w3.org/2000/svg"  width="26" height="26" fill="currentColor" class="bi bi-shop" viewBox="0 0 16 16">
                         <path d="M2.97 1.35A1 1 0 0 1 3.73 1h8.54a1 1 0 0 1 .76.35l2.609 3.044A1.5 1.5 0 0 1 16 5.37v.255a2.375 2.375 0 0 1-4.25 1.458A2.37 2.37 0 0 1 9.875 8 2.37 2.37 0 0 1 8 7.083 2.37 2.37 0 0 1 6.125 8a2.37 2.37 0 0 1-1.875-.917A2.375 2.375 0 0 1 0 5.625V5.37a1.5 1.5 0 0 1 .361-.976zm1.78 4.275a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0 1.375 1.375 0 1 0 2.75 0V5.37a.5.5 0 0 0-.12-.325L12.27 2H3.73L1.12 5.045A.5.5 0 0 0 1 5.37v.255a1.375 1.375 0 0 0 2.75 0 .5.5 0 0 1 1 0M1.5 8.5A.5.5 0 0 1 2 9v6h1v-5a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v5h6V9a.5.5 0 0 1 1 0v6h.5a.5.5 0 0 1 0 1H.5a.5.5 0 0 1 0-1H1V9a.5.5 0 0 1 .5-.5M4 15h3v-5H4zm5-5a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-2a1 1 0 0 1-1-1zm3 0h-2v3h2z"/>
                       </svg>
                 </a>
@@ -272,7 +272,7 @@
         <!-- /.page-header__bg -->
         <div class="container">
           <h2 class="page-header__title" style="font-weight: 600">
-            Comunicados e informções
+            Comunicados e informações
           </h2>
           <ul class="drivschol-breadcrumb list-unstyled"></ul>
           <!-- /.thm-breadcrumb list-unstyled -->
@@ -281,186 +281,10 @@
       </section>
       <!-- /.page-header -->
 
-      <section class="service-page">
-        <div class="container">
-          <div
-            class="service-card-two__carousel drivschol-owl__carousel drivschol-owl__carousel--with-shadow drivschol-owl__carousel--basic-nav owl-carousel"
-            data-owl-options='{
-			"items": 1,
-			"margin": 0,
-			"loop": false,
-			"smartSpeed": 700,
-			"nav": true,
-			"navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
-			"dots": false,
-			"autoplay": false,
-			"responsive": {
-				"0": {
-					"items": 1
-				},
-				"576": {
-					"items": 2,
-					"margin": 30
-				},
-				"992": {
-					"items": 3,
-					"margin": 30
-				}
-			}
-		}'
-          >
-            <div class="item">
-              <div
-                class="service-card-two wow fadeInUp"
-                data-wow-duration="1500ms"
-                data-wow-delay="000ms"
-                style="
-                  background-image: url(assets/images/shapes/service-card-two-bg-1.png);
-                "
-              >
-                <div class="service-card-two__image">
-                  <img
-                    src="assets/images/resources/service-2-1.jpg"
-                    alt="Sauna relax"
-                  />
-
-                  <div class="service-card-two__icon">
-                    <i class="icon-herbal"></i>
-                  </div>
-                  <!-- /.service-card-two__price -->
-                </div>
-                <!-- /.service-card-two__image -->
-                <div class="service-card-two__content">
-                  <h3 class="service-card-two__title">
-                    <a href="service-d-sauna.html">Sauna relax</a>
-                  </h3>
-                  <!-- /.service-card-two__title -->
-                  <img
-                    src="assets/images/shapes/service-card-two-s-1.png"
-                    class="service-card-two__content__shape"
-                    alt
-                  />
-                  <p class="service-card-two__text">
-                    I was impresed by the moling services, not lorem ipsum is
-                    simply free text.
-                  </p>
-                  <!-- /.service-card-two__text -->
-                  <a href="service-d-sauna.html" class="service-card-two__link">
-                    Book now
-                    <i class="icon-right-arrow"></i> </a
-                  ><!-- /.blog-card__link -->
-                </div>
-                <!-- /.service-card-two__content -->
-              </div>
-              <!-- /.service-card-two -->
-            </div>
-            <!-- /.item -->
-            <div class="item">
-              <div
-                class="service-card-two wow fadeInUp"
-                data-wow-duration="1500ms"
-                data-wow-delay="100ms"
-                style="
-                  background-image: url(assets/images/shapes/service-card-two-bg-1.png);
-                "
-              >
-                <div class="service-card-two__image">
-                  <img
-                    src="assets/images/resources/service-2-2.jpg"
-                    alt="Aroma therapy"
-                  />
-
-                  <div class="service-card-two__icon">
-                    <i class="icon-aromatherapy"></i>
-                  </div>
-                  <!-- /.service-card-two__price -->
-                </div>
-                <!-- /.service-card-two__image -->
-                <div class="service-card-two__content">
-                  <h3 class="service-card-two__title">
-                    <a href="service-d-aroma.html">Aroma therapy</a>
-                  </h3>
-                  <!-- /.service-card-two__title -->
-                  <img
-                    src="assets/images/shapes/service-card-two-s-1.png"
-                    class="service-card-two__content__shape"
-                    alt=""
-                  />
-                  <p class="service-card-two__text">
-                    I was impresed by the moling services, not lorem ipsum is
-                    simply free text.
-                  </p>
-                  <!-- /.service-card-two__text -->
-                  <a href="service-d-aroma.html" class="service-card-two__link">
-                    Book now
-                    <i class="icon-right-arrow"></i> </a
-                  ><!-- /.blog-card__link -->
-                </div>
-                <!-- /.service-card-two__content -->
-              </div>
-              <!-- /.service-card-two -->
-            </div>
-            <!-- /.item -->
-            <div class="item">
-              <div
-                class="service-card-two wow fadeInUp"
-                data-wow-duration="1500ms"
-                data-wow-delay="200ms"
-                style="
-                  background-image: url(assets/images/shapes/service-card-two-bg-1.png);
-                "
-              >
-                <div class="service-card-two__image">
-                  <img
-                    src="assets/images/resources/service-2-3.jpg"
-                    alt="Thermo stone"
-                  />
-
-                  <div class="service-card-two__icon">
-                    <i class="icon-stones-1"></i>
-                  </div>
-                  <!-- /.service-card-two__price -->
-                </div>
-                <!-- /.service-card-two__image -->
-                <div class="service-card-two__content">
-                  <h3 class="service-card-two__title">
-                    <a href="service-d-thermo-stone.html">Thermo stone</a>
-                  </h3>
-                  <!-- /.service-card-two__title -->
-                  <img
-                    src="assets/images/shapes/service-card-two-s-1.png"
-                    class="service-card-two__content__shape"
-                    alt=""
-                  />
-                  <p class="service-card-two__text">
-                    I was impresed by the moling services, not lorem ipsum is
-                    simply free text.
-                  </p>
-                  <!-- /.service-card-two__text -->
-                  <a
-                    href="service-d-thermo-stone.html"
-                    class="service-card-two__link"
-                  >
-                    Book now
-                    <i class="icon-right-arrow"></i> </a
-                  ><!-- /.blog-card__link -->
-                </div>
-                <!-- /.service-card-two__content -->
-              </div>
-              <!-- /.service-card-two -->
-            </div>
-            <!-- /.item -->
-          </div>
-          <!-- /.row -->
-        </div>
-        <!-- /.container -->
-      </section>
-      <!-- /.service-page -->
-
       <section class="membership-two">
         <div class="container">
           <div class="sec-title @@extraClassName" @@extraAttr>
-            <h3 class="sec-title__title">see the prices</h3>
+            <h3 class="sec-title__title">Comunicados e informações</h3>
             <!-- /.sec-title__title -->
           </div>
           <!-- /.sec-title -->
@@ -974,7 +798,7 @@
                   <div class="footer-widget--links footer-widget--links2">
                     <ul class="list-unstyled footer-widget__links">
                       <li>
-                        <a href="services.html">Comunicados e informções</a>
+                        <a href="services.html">Comunicados e informações</a>
                       </li>
                       <li><a href="about.html">Sobre</a></li>
                       <li></li>
@@ -1020,45 +844,45 @@
               <div class="col-md-6 col-xl-3">
                 <div class="footer-widget">
                   <div class="footer-widget--gallry">
-                    <div class="footer-widget__grid">
+                    <div class="footer-widget__grid d-none">
                       <a
                         href="assets/images/gallery/gallery-2-1.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-1.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-2.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-2.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-3.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-3.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-4.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-4.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-5.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-5.jpg);
                         "
                       ></a>
                       <a
                         href="assets/images/gallery/gallery-2-6.jpg"
-                        class="footer-widget__grid-item popup-gallery"
+                        class="footer-widget__grid d-none-item popup-gallery"
                         style="
                           background-image: url(assets/images/gallery/gallery-2-6.jpg);
                         "
