--- a/blog-list-right.html
+++ b/blog-list-right.html
@@ -652,7 +652,7 @@
                             <div class="footer-widget">
                                 <div class="footer-widget--links footer-widget--links2">
                                     <ul class="list-unstyled footer-widget__links">
-                                         <li><a href="services.html">Comunicados e informções</a></li><li><a href="about.html">Sobre</a></li>
+                                         <li><a href="services.html">Comunicados e informações</a></li><li><a href="about.html">Sobre</a></li>
                                         <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
@@ -675,13 +675,13 @@
                         <div class="col-md-6 col-xl-3">
                             <div class="footer-widget">
                                 <div class="footer-widget--gallry">
-                                    <div class="footer-widget__grid">
-                                        <a href="assets/images/gallery/gallery-2-1.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-1.jpg);"></a>
-                                        <a href="assets/images/gallery/gallery-2-2.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-2.jpg);"></a>
-                                        <a href="assets/images/gallery/gallery-2-3.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-3.jpg);"></a>
-                                        <a href="assets/images/gallery/gallery-2-4.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-4.jpg);"></a>
-                                        <a href="assets/images/gallery/gallery-2-5.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-5.jpg);"></a>
-                                        <a href="assets/images/gallery/gallery-2-6.jpg" class="footer-widget__grid-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-6.jpg);"></a>
+                                    <div class="footer-widget__grid d-none">
+                                        <a href="assets/images/gallery/gallery-2-1.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-1.jpg);"></a>
+                                        <a href="assets/images/gallery/gallery-2-2.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-2.jpg);"></a>
+                                        <a href="assets/images/gallery/gallery-2-3.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-3.jpg);"></a>
+                                        <a href="assets/images/gallery/gallery-2-4.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-4.jpg);"></a>
+                                        <a href="assets/images/gallery/gallery-2-5.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-5.jpg);"></a>
+                                        <a href="assets/images/gallery/gallery-2-6.jpg" class="footer-widget__grid d-none-item popup-gallery" style="background-image: url(assets/images/gallery/gallery-2-6.jpg);"></a>
                                     </div>
                                 </div>
 
