feat: add tabela nos comunicados

--- a/services.html
+++ b/services.html
@@ -77,6 +77,9 @@
       rel="stylesheet"
       href="assets/vendors/nouislider/nouislider.min.css"
     />
+    <link href="
+    https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
+    " rel="stylesheet">
     <!--  nouislider css plugins -->
     <link
       rel="stylesheet"
@@ -289,198 +292,96 @@
           </div>
           <!-- /.sec-title -->
           <div class="row gutter-y-30">
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="000ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-herbal"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-salt.html">Sauna relax</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$29.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="100ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-aromatherapy"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-aroma.html">Aroma therapy</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$69.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="200ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-fire-control"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-reflexology.html">Reflexology</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$16.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="300ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-stones-1"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-thermo-stone.html">thermo stone</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$43.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="400ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-spa"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-hydro-therapy.html">thai massage</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$38.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
-            <div
-              class="col-md-6 col-lg-6 wow fadeInUp"
-              data-wow-duration="1500ms"
-              data-wow-delay="500ms"
-            >
-              <div
-                class="membership-two-card"
-                style="
-                  background-image: url(assets/images/shapes/membership-s-2-1.png);
-                "
-              >
-                <div class="membership-two-card__icon">
-                  <i class="icon-face-mask"></i>
-                </div>
-                <!-- /.membership-two-card__icon -->
-                <div class="membership-two-card__content">
-                  <h3 class="membership-two-card__title">
-                    <a href="service-d-salt.html">face masks</a>
-                  </h3>
-                  <!-- /.membership-two-card__title -->
-                  <div class="membership-two-card__text">
-                    Lorem ipsum is simply free text
-                  </div>
-                  <!-- /.membership-two-card__text -->
-                </div>
-                <!-- /.membership-two-card__content -->
-                <div class="membership-two-card__price">$18.00</div>
-                <!-- /.membership-two-card__price -->
-              </div>
-              <!-- /.membership-two-card -->
-            </div>
-            <!-- /.col-md-12 col-lg-6 -->
+            <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Nome do Documento</th>
+                    <th scope="col d-none"></th>
+                    <th scope="col">Criado pelo</th>
+                    <th scope="col">opções</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Comunicado FAF N° 26/22</td>
+                    <td></td>
+                    <td>Interclube</td>
+                    <td> <span type="button" class="text-black fw-bolder ropdown-toggle" data-bs-toggle="dropdown">
+                      <i class="bi bi-three-dots-vertical mx-3"></i>
+                     </span>
+                     <ul class="dropdown-menu">
+                       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#myModal" href="#">Visualizar <i class="fa fa-eye" aria-hidden="true"></i> </a></li>
+                       <li><a class="dropdown-item" download="comunicado-faf-26-22.pdf" href="./assets/doc/comunicado-faf-26-22.pdf">Baixar <i class="fa fa-download" aria-hidden="true"></i> </a></li>
+                     </ul></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Regulamento N. para o Licenciamento de Clube</td>
+                    <td></td>
+                    <td>Interclube</td>
+                    <td> <span type="button" class="text-black fw-bolder ropdown-toggle" data-bs-toggle="dropdown">
+                      <i class=" bi bi-three-dots-vertical mx-3"></i>
+                     </span>
+                     <ul class="dropdown-menu">
+                       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#rlc" href="#">Visualizar <i class="fa fa-eye" aria-hidden="true"></i> </a></li>
+                       <li><a class="dropdown-item" download="Regulamento N. para o Licenciamento de Clube" href="./assets/doc/rnlc.pdf">Baixar <i class="fa fa-download" aria-hidden="true"></i> </a></li>
+                     </ul></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Lei  nº 6-14 das Associações Desportivas</td>
+                    <td></td>
+                    <td>Interclube</td>
+                    <td> <span type="button" class="text-black fw-bolder ropdown-toggle" data-bs-toggle="dropdown">
+                      <i class=" bi bi-three-dots-vertical mx-3"></i>
+                     </span>
+                     <ul class="dropdown-menu">
+                       <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#assciacao" href="#">Visualizar <i class="fa fa-eye" aria-hidden="true"></i> </a></li>
+                       <li><a class="dropdown-item" download="Lei  nº 6-14 das Associações Desportivas" href="./assets/doc/LEI  Nº 6-14 DAS ASSOCIAÇÕES DESPORTIVAS.pdf">Baixar <i class="fa fa-download" aria-hidden="true"></i> </a></li>
+                     </ul></td>
+                  </tr>
+                  <tr>
+                    <th scope="row">4</th>
+                    <td>Lei nº 5 -  do Desporto Nacional</td>
+                    <td></td>
+                    <td>Interclube</td>
+                    <td>
+                      <div class="btn-group">
+                        <div class="dropdown">
+                          <span type="button" class="text-black fw-bolder ropdown-toggle" data-bs-toggle="dropdown">
+                           <i class="bi bi-three-dots-vertical mx-3"></i>
+                          </span>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#desporto" href="#">Visualizar <i class="fa fa-eye" aria-hidden="true"></i> </a></li>
+                            <li><a class="dropdown-item" download="Lei nº 5 -  do Desporto Nacional" href="./assets/doc/LEI Nº 5 -  DO DESPORTO NACIONAL.pdf">Baixar <i class="fa fa-download" aria-hidden="true"></i> </a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">5</th>
+                    <td>Estatuto do Grupo Desportivo Interclube</td>
+                    <td></td>
+                    <td>Interclube</td>
+                    <td>
+                      <div class="btn-group">
+                        <div class="dropdown">
+                          <span type="button" class="text-black fw-bolder ropdown-toggle" data-bs-toggle="dropdown">
+                           <i class="bi bi-three-dots-vertical mx-3"></i>
+                          </span>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#statuto" href="#">Visualizar <i class="fa fa-eye" aria-hidden="true"></i> </a></li>
+                            <li><a class="dropdown-item" download="Estatuto do Grupo Desportivo Interclube" href="./assets/doc/ESTATUTO DOGDI.pdf">Baixar <i class="fa fa-download" aria-hidden="true"></i> </a></li>
+                          </ul>
+                        </div>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
           </div>
           <!-- /.row -->
         </div>
