--- a/404.html
+++ b/404.html
@@ -535,13 +535,13 @@
                                         <li><li class="dropdown"><a href="#">Modalidades</a>
                                 <ul class="sub-menu">
                                  
-  <li><a href="?p=modalidade&amp;s=futebol">Futebol</a></li>
-  <li><a href="?p=modalidade&amp;s=basquetebol">Basquetebol</a></li>
-  <li><a href="?p=modalidade&amp;s=andebol">Andebol</a></li>
-  <li><a href="?p=modalidade&amp;s=judo">Judo</a></li>
-  <li><a href="?p=modalidade&amp;s=boxe">Boxe</a></li>
-  <li><a href="?p=modalidade&amp;s=atletismo">Atletismo</a></li>
-  <li><a href="?p=modalidade&amp;s=tiro">Tiro Desportivo</a></li>
+  <li><a href="desporto.html#foot">Futebol</a></li>
+  <li><a href="desporto.html#baskt">Basquetebol</a></li>
+  <li><a href="desporto.html#andebol">Andebol</a></li>
+  <li><a href="desporto.html#judo">Judo</a></li>
+  <li><a href=" desporto.html#boxe">Boxe</a></li>
+  <li><a href="desporto.html#atlatismo">Atletismo</a></li>
+  <li><a href="desporto.html#tiro">Tiro Desportivo</a></li>
    
 </ul></li>
                                         <li><a href="services-grid.html">Academia</a></li>
