--- a/blog-list.html
+++ b/blog-list.html
@@ -181,18 +181,18 @@
                 <li class="dropdown">
                   <a href="#">Modalidades</a>
                   <ul class="sub-menu">
-                    <li><a href="?p=modalidade&amp;s=futebol">Futebol</a></li>
+                    <li><a href="desporto.html#foot">Futebol</a></li>
                     <li>
-                      <a href="?p=modalidade&amp;s=basquetebol">Basquetebol</a>
+                      <a href="desporto.html#baskt">Basquetebol</a>
                     </li>
-                    <li><a href="?p=modalidade&amp;s=andebol">Andebol</a></li>
-                    <li><a href="?p=modalidade&amp;s=judo">Judo</a></li>
-                    <li><a href="?p=modalidade&amp;s=boxe">Boxe</a></li>
+                    <li><a href="desporto.html#andebol">Andebol</a></li>
+                    <li><a href="desporto.html#judo">Judo</a></li>
+                    <li><a href=" desporto.html#boxe">Boxe</a></li>
                     <li>
-                      <a href="?p=modalidade&amp;s=atletismo">Atletismo</a>
+                      <a href="desporto.html#atlatismo">Atletismo</a>
                     </li>
                     <li>
-                      <a href="?p=modalidade&amp;s=tiro">Tiro Desportivo</a>
+                      <a href="desporto.html#tiro">Tiro Desportivo</a>
                     </li>
                   </ul>
                   <ul class="sub-menu d-none">
@@ -557,25 +557,25 @@
                         <a href="#">Modalidades</a>
                         <ul class="sub-menu">
                           <li>
-                            <a href="?p=modalidade&amp;s=futebol">Futebol</a>
+                            <a href="desporto.html#foot">Futebol</a>
                           </li>
                           <li>
-                            <a href="?p=modalidade&amp;s=basquetebol"
+                            <a href="desporto.html"
                               >Basquetebol</a
                             >
                           </li>
                           <li>
-                            <a href="?p=modalidade&amp;s=andebol">Andebol</a>
+                            <a href="desporto.html#andebol">Andebol</a>
                           </li>
-                          <li><a href="?p=modalidade&amp;s=judo">Judo</a></li>
-                          <li><a href="?p=modalidade&amp;s=boxe">Boxe</a></li>
+                          <li><a href="desporto.html#judo">Judo</a></li>
+                          <li><a href=" desporto.html#boxe">Boxe</a></li>
                           <li>
-                            <a href="?p=modalidade&amp;s=atletismo"
+                            <a href="desporto.html"
                               >Atletismo</a
                             >
                           </li>
                           <li>
-                            <a href="?p=modalidade&amp;s=tiro"
+                            <a href="desporto.html"
                               >Tiro Desportivo</a
                             >
                           </li>
@@ -839,7 +839,7 @@
     <script src="assets/js/drivschol.js"></script>
 
     <script>
-      let url = "https://api.jf-tech.org/dashboard/news?page=1&perPage=6";
+      let url = "https://api.jf-tech.org/dashboard/news";
       var el = document.getElementsByClassName("row gutter-y-30");
 
 
@@ -850,7 +850,7 @@
         try {
           const response = await fetch(url, { method: "GET" }).then((resp) => {
             return resp.json().then((data) => {
-              initplayers(data.object);
+              initplayers(data);
               return resp;
             });
           });
@@ -863,7 +863,7 @@
 
       function initplayers(obj) {
         var urlImag = "https://api.jf-tech.org/public/noticia/";
-        var frutas = obj.data;
+        var frutas = obj.object;
         console.log(frutas);
         var num = 0;
 
